<resources>
    <string name="app_name">Ratatouille</string>
    <string name="title_activity_mapa">Map</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="registro">Registrarse</string>
    <string name="nombre_de_usuario">Correo</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="contrasenia">Contraseña</string>
    <string name="login_message">Inciar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="direccion_txt">Dirección</string>
    <string name="edad">Edad</string>
    <string name="tel"># Teléfono</string>
    <string name="chef_cerca">Ver Chefs Cerca</string>
    <string name="add_ele">Añadir Elemento</string>
    <string name="ver_mapa">Ver Mapa de Chefs</string>
    <string name="add_elests">Añadir Elementos</string>
</resources>
