<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/registro"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nameInputLayOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayOut"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/nombre"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/addrInputLayOut"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addrInputLayOut"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/direccion_txt"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/emailInputLayOut"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayOut"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAddr"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayOut"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/nombre_de_usuario"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/ageInputLayOut"
            app:layout_constraintTop_toBottomOf="@+id/addrInputLayOut"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageInputLayOut"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/edad"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/numInputLayOut"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayOut"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEdad"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numInputLayOut"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/tel"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/passInputLayOut"
            app:layout_constraintTop_toBottomOf="@+id/ageInputLayOut"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNum"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="576dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passInputLayOut"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/contrasenia"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/btnReg"
            app:layout_constraintTop_toBottomOf="@+id/numInputLayOut"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReg"
            android:layout_width="345dp"
            android:layout_height="48dp"
            android:text="@string/registro"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimary"
            app:iconTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passInputLayOut" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>